directive of product-tab added

--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/contact.js"></script>
         <script src="scripts/controllers/car.js"></script>
+        <script src="scripts/directives/product.js"></script>
         <!-- endbuild -->
 </body>
 </html>
